--- a/main.css
+++ b/main.css
@@ -19,28 +19,34 @@ div .wrapper {
 	
 	}
 
-nav ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #333;
-	position: fixed;
-	top: 0;
- 	width: 100%;
-  }
-  
-  li {
-	float: left;
-  }
-  
-  li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-  }
+	#navbar {
+		overflow: hidden;
+		background-color: #333;
+		position: fixed;
+		top: 0;
+		width: 100%;
+	}
+	/* Hide Hamburger Menu */
+	#navbar label, #hamburger {
+	display: none;
+	}
+	nav ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+	  }
+	  
+	  li {
+		float: left;
+	  }
+	  
+	  li a {
+		display: block;
+		color: white;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+	  }
   
   /* Change the link color to #111 (black) on hover */
   li a:hover {
