--- a/responsive.css
+++ b/responsive.css
@@ -1,13 +1,14 @@
 /* responsive.css  */
 
-/* 500 to 960 pixels */
-@media screen and (min-width: 31.25em) {
+500 to 960 pixels 
+@media screen and (min-width: 31.25em){
     nav ul li {
         width: 33%;
-    }
+     }
     h1 {
         margin-top: 50px;
     }
+    
     #col1 {
             width: 43%;
     }
@@ -27,7 +28,7 @@
     }
     div.wrapper {
         min-width: 600px;
-        }
+    }
     }
    
      /* under 500px */
@@ -64,16 +65,18 @@
     #navbar input:checked ~ ul {
       display: block;
     }
-  }
+  
   h1 {
       margin-top: 50px;
   }
-  img {
+  
+  /*img {
     display: block;
     margin: 0 auto;
-    }
+    }*/
     #col1, #col2, #col3 {
         margin: 0;
         float: none;
         width: 100%;
     }
+  }
