--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 	
 }
 div.wrapper {
-	max-width: 1000px;
+	max-width: 960px;
 	margin: 0 auto;
 	padding-top: 0px;
 	}
@@ -56,7 +56,9 @@ header {
 	height: 200px;
 	width: 100%;
 }
-
+h1 {
+	margin-top: 1px;
+}
 #welcome-section {
 	margin-top: 0 auto;
 	height: 100vh;
@@ -64,7 +66,6 @@ header {
 	}
 
 #office-img {
-		width: auto;
 		max-width: 100%;
 		height: auto;
         text-align: center;
@@ -91,7 +92,7 @@ section {
 	width: 30%;
 	margin: 1em 1em 1em 0em;	
 }
-.resume {
+.resume-section {
 	margin-left: 10px;
 }
 .btns{
