--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ div.wrapper {
 	}
 	
 #navbar {
+		max-width: 960px;
 		overflow: hidden;
 		background-color: #333;
 		position: fixed;
@@ -58,6 +59,9 @@ header {
 }
 h1 {
 	margin-top: 1px;
+	background: brown;
+	text-align: center;
+	padding: 0.2em 0em 0.2em 0em;
 }
 #welcome-section {
 	margin-top: 0 auto;
@@ -70,6 +74,12 @@ h1 {
 		height: auto;
         text-align: center;
 	}
+
+h2 {
+	background: brown;
+	text-align: center;
+	padding: 0.2em 0em 0.2em 0em;
+}
 
 section {
 	margin: 0 auto;
@@ -92,8 +102,11 @@ section {
 	width: 30%;
 	margin: 1em 1em 1em 0em;	
 }
-.resume-section {
-	margin-left: 10px;
+#resume {
+	
+	background: brown;
+	text-align: center;
+	padding: 0.2em 0em 0.2em 0em;
 }
 .btns{
 	text-align: center;
