--- a/main.css
+++ b/main.css
@@ -11,15 +11,16 @@ div.wrapper {
 	max-width: 960px;
 	margin: 0 auto;
 	padding-top: 0px;
-	}
 	
+	}
+
 #navbar {
-		max-width: 960px;
-		overflow: hidden;
-		background-color: #333;
-		position: fixed;
-		top: 0;
-		width: 100%;
+	max-width: 960px;
+	overflow: hidden;
+	background-color: #333;
+	position: fixed;
+	top: 0;
+	width: 100%;
 	}
 /* Hide Hamburger Menu */
 #navbar label, #hamburger {
@@ -43,7 +44,7 @@ li a {
 		text-decoration: none;
 	  }
   
-  /* Change the link color to #111 (black) on hover */
+/* Change the link color to #111 (black) on hover */
 li a:hover {
 	background-color: #111;
   }
@@ -57,32 +58,34 @@ header {
 	height: 200px;
 	width: 100%;
 }
+
 h1 {
 	margin-top: 1px;
 	background: brown;
 	text-align: center;
-	padding: 0.2em 0em 0.2em 0em;
+	padding: 0.2em 0 0.2em 0;
 }
-#welcome-section {
-	margin-top: 0 auto;
-	height: 100vh;
-	text-align: center;
-	}
-
-#office-img {
-		max-width: 100%;
-		height: auto;
-        text-align: center;
-	}
 
 h2 {
 	background: brown;
 	text-align: center;
-	padding: 0.2em 0em 0.2em 0em;
+	padding: 0.2em 0 0.2em 0;
 }
 
-section {
+#welcome-section {
 	margin: 0 auto;
+	text-align: center;
+	height: 100vh;
+	}
+
+#office-img {
+	width: auto;
+	height: auto;
+	align-items: center;
+}
+section {
+	margin-left: 0 auto;
+
 }
 
 #col1 {
@@ -91,7 +94,7 @@ section {
 	margin: 1em 0em 1em 0.5em;
 }
 
-#col2 {
+ #col2 {
 	float: left;
 	width: 30%;
 	margin: 1em 2em 1em 2em;
@@ -102,13 +105,7 @@ section {
 	width: 30%;
 	margin: 1em 1em 1em 0em;	
 }
-#resume {
-	
-	background: brown;
-	text-align: center;
-	padding: 0.2em 0em 0.2em 0em;
-}
-.btns{
+.btns {
 	text-align: center;
 }
 footer {
