--- a/responsive.css
+++ b/responsive.css
@@ -1,12 +1,16 @@
 /* responsive.css  */
 
-/* 500 to 960 pixels */ 
-@media screen and (min-width: 31.25em){
+/* 500 to 960 pixels */
+@media screen and (min-width: 31.25em) {
     nav ul li {
         width: 33%;
-      }
+    }
     h1 {
         margin-top: 50px;
+    }
+    #office-img {
+        display: inline-block;
+        width: 80%;
     }
     #col1 {
             width: 43%;
@@ -25,15 +29,18 @@
         width: 30%;
         margin: .5em 1em 1em 0;
     }
-   /* div.wrapper {
+    div.wrapper {
         min-width: 600px;
-    }*/
+        }
     }
    
      /* under 500px */
 @media screen and (max-width: 31.25em){
     header {
         display: none;
+        /*font-size: 48px;
+        padding: 0;
+        text-align: center;*/
     }
 
     /* Show Hamburger */
@@ -61,18 +68,16 @@
     #navbar input:checked ~ ul {
       display: block;
     }
-  
+  }
   h1 {
       margin-top: 50px;
   }
-  
-  /*img {
-    display: block;
-    margin: 0 auto;
-    }*/
+  #office-img {
+    display: inline-block;
+    width: 80%;
+}
     #col1, #col2, #col3 {
         margin: 0;
         float: none;
         width: 100%;
     }
-  }
